changed hero section to be position relative so that wavy divider would be positioned correctly on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -228,11 +228,12 @@ hr.burgeer{
     background-repeat: no-repeat;
     background-position: center center ;
     background-attachment: fixed;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     //justify-content: center;
     align-items: center;
+    position: relative;
     
 };  
 
